<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.una.zisc.CadastroActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="161dp"
        android:layout_height="141dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/logotipo"
        android:scaleType="fitCenter"
        android:src="@drawable/logo_marker"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/crie_seu_cadastro"
        android:textAlignment="center"
        android:textColor="#f4f6f7"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/textNomeUser"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/textNomeUser"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_corners"
        android:cursorVisible="true"
        android:hint="@string/nome_completo"
        android:paddingEnd="5dp"
        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:textColor="#f4f6f7"
        android:textColorHint="#f4f6f7"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/textEmailUser" />

    <EditText
        android:id="@+id/textEmailUser"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_corners"
        android:cursorVisible="true"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:paddingEnd="5dp"
        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:textColor="#f4f6f7"
        android:textColorHint="#f4f6f7"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/textCpfUser" />

    <EditText
        android:id="@+id/textCpfUser"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_corners"
        android:hint="@string/digite_cpf"
        android:inputType="number"
        android:maxLength="11"
        android:paddingEnd="5dp"
        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/textCelUser" />

    <EditText
        android:id="@+id/textCelUser"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_corners"
        android:hint="@string/digite_celular"
        android:inputType="phone"
        android:paddingEnd="5dp"
        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/textPasswd" />

    <EditText
        android:id="@+id/textPasswd"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_corners"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/digite_uma_senha"
        android:inputType="textPassword"
        android:paddingEnd="5dp"
        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:textColor="#f4f6f7"
        android:textColorHint="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/textRePasswd" />

    <EditText
        android:id="@+id/textRePasswd"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_corners"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/redigite_a_senha"
        android:inputType="textPassword"
        android:paddingEnd="5dp"
        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:textColor="#f4f6f7"
        android:textColorHint="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegister" />

    <Button
        android:id="@+id/buttonRegister"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_round"
        android:text="@string/cadastrar"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent" />


</android.support.constraint.ConstraintLayout>
