<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.una.zisc.ProfileActivity"
    tools:showIn="@layout/activity_profile">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textColorHint="@color/white">

            <EditText
                android:id="@+id/input_nome"
                style="@style/EditTextZisc"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/nome_completo"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_cpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/layout_nome"
            android:textColorHint="@color/white">

            <EditText
                android:id="@+id/input_cpf"
                style="@style/EditTextZisc"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/digite_cpf"
                android:inputType="number"
                android:maxLength="11" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_celular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/layout_cpf"
            android:textColorHint="@color/white">

            <EditText
                android:id="@+id/input_celular"
                style="@style/EditTextZisc"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/digite_celular"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/layout_celular"
            android:textColorHint="@color/white">

            <EditText
                android:id="@+id/input_email"
                style="@style/EditTextZisc"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>
    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>
